k8s/athena-postgres-migration.yml
apiVersion: v1
kind: Pod
metadata:
  name: athena-postgres-migration
  labels:
    app: athena-postgres-migration

spec:
  containers:
    - name: postgres
      image: pgvector/pgvector:pg16
      imagePullPolicy: IfNotPresent

      ports:
        - containerPort: 5432

      volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data

  volumes:
    - name: postgres-data
      persistentVolumeClaim:
        claimName: athena-postgres-pvc
