k8s/athena-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: athena-postgres

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: athena-postgres

  template:
    metadata:
      labels:
        app: athena-postgres

    spec:
      containers:
        - name: athena-postgres
          image: pgvector/pgvector:pg16
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: athena-postgres-pvc
