k8s/athena-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: athena-backend
spec:
  selector:
    app: athena-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
