k8s/athena-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: athena-frontend
spec:
  selector:
    app: athena-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
