k8s/athena-postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: athena-postgres

spec:
  selector:
    app: athena-postgres

  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

  type: ClusterIP
