k8s/athena-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: athena-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: athena.localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: athena-backend
                port:
                  number: 8080

          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: athena-backend
                port:
                  number: 8080

          - path: /login
            pathType: Prefix
            backend:
              service:
                name: athena-backend
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: athena-frontend
                port:
                  number: 80

    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: athena-backend
                port:
                  number: 8080

          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: athena-backend
                port:
                  number: 8080

          - path: /login
            pathType: Prefix
            backend:
              service:
                name: athena-backend
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: athena-frontend
                port:
                  number: 80
                  
          - path: /logout
            pathType: Prefix
            backend:
              service:
                name: athena-backend
                port:
                  number: 8080
